# webserv

./: .gitignore  CMakeLists.txt  Makefile  compile_commands.json  index.html  main.cpp  teste.c
.github/: pull_request_template.md
.github/workflows/: build.yaml  test.yaml
configurations/: default.conf  new.conf  old-default.conf  php-test.conf  teste.conf  testes_nginx_wsl.conf
scripts/: build_and_run_tests.sh
src/: main.cpp
src/CGI/: Cgi.cpp  Cgi.hpp
src/files/: AFile.cpp  AFile.hpp  File.cpp  File.hpp  Page.cpp  Page.hpp
src/parsers/: Connection.cpp  Connection.hpp  Http.cpp  Http.hpp  Location.cpp  Location.hpp  Parser.cpp  Parser.hpp  Request.cpp  Request.hpp  Server.cpp  Server.hpp  WebServ.cpp  WebServ.hpp  directive.cpp  directive.hpp  notImplemented.cpp  parser.cpp  parser.hpp
src/parsers/Configuration/: Configuration.cpp  Configuration.hpp  Location.cpp  Location.hpp  Server.cpp  Server.hpp  teste.cpp
src/response/: code.hpp  header.hpp  response.cpp  response.hpp  status.hpp
src/services/Logger/: Logger.cpp  Logger.hpp
src/services/logger/: logger.cpp  logger.hpp
src/utils/Color/: Color.cpp  Color.hpp
src/utils/color/: color.cpp  color.hpp
study/: ServerController.cpp  ServerController.hpp  a.out  notations.md  test-no-multiplex.cpp  test-with-multiplex.cpp  test.cpp
tests/: CMakeLists.txt  connection_test.cpp  directive_test.cpp  location_test.cpp  main.cpp  parser_test.cpp  request_test.cpp
utils/: Color.cpp  Color.hpp
utils/color/: color.cpp
var/www/html/: form.html  index.html
var/www/html/mysite/: example-req-get.txt  example-req-post.txt  form.html  index.html
var/www/html/mysite/cgi/: index.php
var/www/html/mysite/css/: style.css
var/www/html/mysite/delete/: data.json  (+1 more)
var/www/html/mysite2/: index.html
var/www/html/onlyphp/: index.php
(+9 files in other folders)
